--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "react-redux": "^7.1.1",
+    "redux-saga": "^1.1.1",
+    "axios": "^0.19.0",
+    "final-form": "^4.18.5",
+    "react-final-form": "^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
